--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive CRUD App with Tabs</title>
+    <title>FIRST TIMERS - JANUARY 2025</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1>FIRST TIMERS FOR THE MONTH OF JANUARY 2025</h1>
+        <h1>FIRST TIMERS - JANUARY 2025</h1>
         <!-- Tabs -->
         <div class="tabs mt-4">
             <button class="tab-button active" data-tab="tab1">XO YOUTH</button>
