fixed fetching data in google sheets

--- a/index.html
+++ b/index.html
@@ -102,6 +102,75 @@
                 </table>
             </div>
         </div>
+
+        <div id="tab3" class="tab-content">
+            <form id="dataForm3" class="hidden">
+                <!-- Same structure as Tab 1 -->
+            </form>
+            <div class="table-wrapper">
+                <table id="dataTable3">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Interested to Join</th>
+                            <th>Discipler</th>
+                            <th>Texted</th>
+                            <th>Update</th>
+                            <th>Followed Up</th>
+                            <th>Started One2One</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+
+        <div id="tab4" class="tab-content">
+            <form id="dataForm4" class="hidden">
+                <!-- Same structure as Tab 1 -->
+            </form>
+            <div class="table-wrapper">
+                <table id="dataTable4">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Interested to Join</th>
+                            <th>Discipler</th>
+                            <th>Texted</th>
+                            <th>Update</th>
+                            <th>Followed Up</th>
+                            <th>Started One2One</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+
+        <div id="tab5" class="tab-content">
+            <form id="dataForm5" class="hidden">
+                <!-- Same structure as Tab 1 -->
+            </form>
+            <div class="table-wrapper">
+                <table id="dataTable5">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Interested to Join</th>
+                            <th>Discipler</th>
+                            <th>Texted</th>
+                            <th>Update</th>
+                            <th>Followed Up</th>
+                            <th>Started One2One</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
         <!-- Repeat Tab 3, Tab 4, Tab 5 -->
     </div>
     <!-- Bootstrap Modal -->
