--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body>
     <div class="container">
         <h1>FIRST TIMERS - JANUARY 2025</h1>
+        <!-- Google Sign-In Button -->
+        <div id="g_id_onload" data-client_id="653073386096-flq5n7ukan8cs2rtla2cgg9cm3aphl22.apps.googleusercontent.com"
+            data-context="signin" data-ux_mode="popup" data-callback="handleCredentialResponse"
+            data-auto_prompt="false">
+        </div>
+        <div class="g_id_signin" data-type="standard"></div>
         <!-- Tabs -->
         <!-- Tab Contents -->
         <div class="tabs mt-4" role="tablist">
@@ -390,9 +396,25 @@
             isAuthenticated: false
         };
 
-        // Load the Google API client
-        function loadGoogleAPI() {
-            gapi.load('client:auth2', initClient);
+        function handleCredentialResponse(response) {
+            console.log("Encoded JWT ID token: " + response.credential);
+
+            // Decode the token to get user data
+            const userObject = parseJwt(response.credential);
+            state.userData = userObject;
+            state.isAuthenticated = true;
+
+            console.log("User Info:", userObject);
+
+            // Display a welcome message
+            document.body.insertAdjacentHTML('beforeend', `
+                <h2>Welcome, ${userObject.name}</h2>
+                <p>Email: ${userObject.email}</p>
+                <img src="${userObject.picture}" alt="Profile Picture" style="width: 100px; height: 100px; border-radius: 50%;">
+            `);
+
+            // Fetch data for Tab 1 as default after sign-in
+            getData("tab1");
         }
 
         // Initialize the Google API client
@@ -568,8 +590,6 @@
 
         // Initialize
         function init() {
-            loadGoogleAPI();
-
             // Event listeners
             document.querySelectorAll(".tab-button").forEach(button => {
                 button.addEventListener("click", handleTabClick);
