--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@
 
             console.log("User Info:", userObject);
 
+            console.log(state.isAuthenticated);
+
             // Fetch data for Tab 1 as default after sign-in
             getData("tab1");
         }
