--- a/index.html
+++ b/index.html
@@ -396,6 +396,25 @@
             isAuthenticated: false
         };
 
+        function loadSheetsApi() {
+            return new Promise((resolve, reject) => {
+                gapi.load('client', () => {
+                    gapi.client.init({
+                        apiKey: CONFIG.API_KEY, // Replace with your actual API key
+                        discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
+                        clientId: CONFIG.CLIENT_ID, // Replace with your actual client ID
+                        scope: 'https://www.googleapis.com/auth/spreadsheets'
+                    }).then(() => {
+                        console.log('Google Sheets API initialized');
+                        resolve();
+                    }).catch(error => {
+                        console.error('Error initializing Google Sheets API:', error);
+                        reject(error);
+                    });
+                });
+            });
+        }
+
         function parseJwt(token) {
             const base64Url = token.split('.')[1];
             const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
@@ -521,42 +540,34 @@
         }
 
         // Update Google Sheets
-        async function updateRow(rowId, values) {
-            if (!state.isAuthenticated) {
+        async function updateRow(id, values) {
+            if (!gapi.auth2.getAuthInstance().isSignedIn.get()) {
                 try {
-                    // Ensure the user is signed in
-                    const authInstance = gapi.auth2.getAuthInstance();
-                    await authInstance.signIn();
-                } catch (authError) {
-                    console.error("Authentication failed:", authError);
-                    throw new Error("Authentication is required to update the row.");
+                    await gapi.auth2.getAuthInstance().signIn();
+                } catch (error) {
+                    console.error("Authentication failed:", error);
+                    throw new Error("Authentication required");
                 }
             }
 
-            // Define the range in A1 notation for the specific row
-            const range = `${CONFIG.SHEET_NAME}!D${rowId + 1}:O${rowId + 1}`;
+            const spreadsheetId = CONFIG.SPREADSHEET_ID; // Replace with your actual spreadsheet ID
+            const range = `${CONFIG.SHEET_NAME}!D${id + 1}:O${id + 1}`; // Adjust 'Sheet1' if your sheet has a different name
 
             try {
-                // Define the update request
-                const request = {
-                    spreadsheetId: CONFIG.SPREADSHEET_ID,
+                const response = await gapi.client.sheets.spreadsheets.values.update({
+                    spreadsheetId: spreadsheetId,
                     range: range,
-                    valueInputOption: 'RAW', // RAW or USER_ENTERED based on your need
-                    resource: {
-                        values: [values], // Wrap the values in an array
-                    },
-                };
+                    valueInputOption: 'USER_ENTERED',
+                    resource: { values: [values] }
+                });
 
-                // Make the API call to update the values
-                const response = await gapi.client.sheets.spreadsheets.values.update(request);
-
-                console.log("Row updated successfully:", response);
-            } catch (updateError) {
-                console.error("Error updating the row:", updateError);
-                throw updateError;
+                console.log('Cells updated:', response.result.updatedCells);
+                return response.result;
+            } catch (error) {
+                console.error("Error updating row:", error);
+                throw error;
             }
         }
-
 
         // Edit functionality
         function handleEditClick(tab, id) {
@@ -604,8 +615,9 @@
         }
 
         // Initialize
-        function init() {
+        async function init() {
             // Event listeners
+            await loadSheetsApi();
             document.querySelectorAll(".tab-button").forEach(button => {
                 button.addEventListener("click", handleTabClick);
             });
