--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/api.js"></script>
 </head>
 
 <body>
@@ -397,25 +396,6 @@
             isAuthenticated: false
         };
 
-        function loadSheetsApi() {
-            return new Promise((resolve, reject) => {
-                gapi.load('client', () => {
-                    gapi.client.init({
-                        apiKey: CONFIG.API_KEY, // Replace with your actual API key
-                        discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
-                        clientId: CONFIG.CLIENT_ID, // Replace with your actual client ID
-                        scope: 'https://www.googleapis.com/auth/spreadsheets'
-                    }).then(() => {
-                        console.log('Google Sheets API initialized');
-                        resolve();
-                    }).catch(error => {
-                        console.error('Error initializing Google Sheets API:', error);
-                        reject(error);
-                    });
-                });
-            });
-        }
-
         function parseJwt(token) {
             const base64Url = token.split('.')[1];
             const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
@@ -542,7 +522,7 @@
 
         // Update Google Sheets
         async function updateRow(id, values) {
-            if (!gapi.auth2.getAuthInstance().isSignedIn.get()) {
+            if (!state.isAuthenticated) {
                 try {
                     await gapi.auth2.getAuthInstance().signIn();
                 } catch (error) {
@@ -551,19 +531,16 @@
                 }
             }
 
-            const spreadsheetId = CONFIG.SPREADSHEET_ID; // Replace with your actual spreadsheet ID
-            const range = `${CONFIG.SHEET_NAME}!D${id + 1}:O${id + 1}`; // Adjust 'Sheet1' if your sheet has a different name
-
+            const range = `${CONFIG.SHEET_NAME}!D${id + 1}:O${id + 1}`;
             try {
-                const response = await gapi.client.sheets.spreadsheets.values.update({
-                    spreadsheetId: spreadsheetId,
+                const request = {
+                    spreadsheetId: CONFIG.SPREADSHEET_ID,
                     range: range,
-                    valueInputOption: 'USER_ENTERED',
+                    valueInputOption: 'RAW',
                     resource: { values: [values] }
-                });
+                };
 
-                console.log('Cells updated:', response.result.updatedCells);
-                return response.result;
+                await gapi.client.sheets.spreadsheets.values.update(request);
             } catch (error) {
                 console.error("Error updating row:", error);
                 throw error;
@@ -616,9 +593,8 @@
         }
 
         // Initialize
-        async function init() {
+        function init() {
             // Event listeners
-            await loadSheetsApi();
             document.querySelectorAll(".tab-button").forEach(button => {
                 button.addEventListener("click", handleTabClick);
             });
