--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
                     // Update Google Sheets
                     await updateRow(id, [
-                        item.name, '', '', '', '', '', item.interested, item.discipler, item.texted,
+                        item.name, item.interested, item.discipler, item.texted,
                         item.update, item.followedUp, item.started
                     ]);
 
