--- a/index.html
+++ b/index.html
@@ -610,6 +610,8 @@
                         item[field] = document.getElementById(`modal${field.charAt(0).toUpperCase() + field.slice(1)}`).value;
                     });
 
+                    console.log(item);
+
                     // Update Google Sheets
                     await updateRow(id, [
                         item.name, 'G', 'G', 'G', 'G', 'G', item.interested, item.discipler, item.texted,
