--- a/index.html
+++ b/index.html
@@ -396,6 +396,12 @@
             isAuthenticated: false
         };
 
+        window.onload = async () => {
+            await gapi.load('auth2', () => {
+                gapi.auth2.init({ client_id: CONFIG.CLIENT_ID + '.apps.googleusercontent.com' });
+            });
+        };
+
         function parseJwt(token) {
             const base64Url = token.split('.')[1];
             const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
