--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                     <thead>
                         <tr>
                             <th>Name</th>
+                            <th>Contact No.</th>
                             <th>Interested to Join</th>
                             <th>Discipler</th>
                             <th>Texted</th>
